--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,25 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/images/
+  fonts:
+    - family: MSPlusRounded
+      fonts:
+        - asset: assets/fonts/MS-Plus-Rounded/MPLUSRounded1c-Black.ttf
+          weight: 900
+        - asset: assets/fonts/MS-Plus-Rounded/MPLUSRounded1c-Bold.ttf
+          weight: 600
+        - asset: assets/fonts/MS-Plus-Rounded/MPLUSRounded1c-ExtraBold.ttf
+          weight: 700
+        - asset: assets/fonts/MS-Plus-Rounded/MPLUSRounded1c-Light.ttf
+          weight: 300
+        - asset: assets/fonts/MS-Plus-Rounded/MPLUSRounded1c-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/MS-Plus-Rounded/MPLUSRounded1c-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/MS-Plus-Rounded/MPLUSRounded1c-Thin.ttf
+          weight: 200
 
   # To add assets to your application, add an assets section, like this:
   # assets:
